# yank-keys

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  styles.css  xmake.lua
src/: data.cpp  input.cpp  main.cpp  window.cpp
src/data/: helper.cpp  keymap.cpp  modifier.cpp
src/input/: event.cpp  external.cpp  memory.cpp  modifier.cpp  name.cpp  ptr.cpp  token.cpp
src/window/: bottom.cpp  cfg.cpp  menu.cpp  toggle.cpp
test/: data_test.cpp  input_test.cpp
